# flexim

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/commands/: commit.md
.github/workflows/: deploy.yml  rust.yml
assets/: long_sample.csv  long_sample2.csv  object_sample.json  sample.csv
assets/test_data/layout/: test-layout.json  test-layout_3a13e3eaae1439f3eeea46b5ea78851ca7781f9a.json
crates/flexim-client/: Cargo.toml
crates/flexim-client/src/: lib.rs
crates/flexim-config/: Cargo.toml
crates/flexim-config/src/: lib.rs
crates/flexim-connect/: Cargo.toml  build.rs
crates/flexim-connect/examples/: dummy_flexim_client.rs  dummy_flexim_server.rs  insert_flexim_client.rs
crates/flexim-connect/proto/: connect.proto  echo.proto
crates/flexim-connect/src/: lib.rs  local_save_server.rs  server.rs  utility.rs
crates/flexim-data-type/: Cargo.toml
crates/flexim-data-type/src/: lib.rs
crates/flexim-data-view/: Cargo.toml
crates/flexim-data-view/src/: lib.rs  object.rs
crates/flexim-data-visualize/: Cargo.toml
crates/flexim-data-visualize/examples/: stack_check.rs
crates/flexim-data-visualize/proptest-regressions/: visualize.txt
crates/flexim-data-visualize/src/: cache.rs  data_view.rs  data_visualizable.rs  lib.rs  pallet.rs  special_columns_visualize.rs  visualize.rs
crates/flexim-font/: Cargo.toml
crates/flexim-font/src/: lib.rs
crates/flexim-image-utility/: Cargo.toml
crates/flexim-image-utility/src/: lib.rs
crates/flexim-layout/: Cargo.toml
crates/flexim-layout/src/: check.rs  lib.rs  pane.rs
crates/flexim-polars/: Cargo.toml  README.md
crates/flexim-polars/src/: export.rs  lib.rs  prelude.rs
crates/flexim-storage/: Cargo.toml
crates/flexim-storage/src/: lib.rs
crates/flexim-storybook/: Cargo.toml
crates/flexim-storybook/examples/: image_on_rectangles.rs  rectangles_on_image.rs
crates/flexim-table-widget/: Cargo.toml
crates/flexim-table-widget/assets/: input.csv
crates/flexim-table-widget/examples/: table_widget.rs
crates/flexim-table-widget/src/: cache.rs  lib.rs
crates/flexim-utility/: Cargo.toml
crates/flexim-utility/src/: lib.rs
crates/flexim-wasm-report/: index.html
crates/flexim-wasm-report/src/: single_stack.rs
flexim_py/: Cargo.toml  pyproject.toml
flexim_py/.github/workflows/: CI.yml
flexim_py/examples/: decode.rs
flexim_py/flexim_sdk/flexim/: bag.py  client.py  data_type.py
flexim_py/flexim_sdk/flexim/pb/: connect_pb2.py  connect_pb2_grpc.py
flexim_py/flexim_sdk/flexim_py/: bag.py  client.py  data_type.py  utility.py
flexim_py/flexim_sdk/flexim_py/pb/: connect_pb2.py  connect_pb2.pyi  connect_pb2_grpc.py
flexim_py/src/: lib.rs
flexim_py/tests/: test_bag.py
src/: initial_data.rs  left_panel.rs  lib.rs  main.rs  pane.rs
tests/: app_test.rs
wasm/flexim-wasm-report/: Cargo.toml
