[package]
name = "flexim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*"
]

[workspace.dependencies]
egui = "0.24.1"
egui_extras = { version = "0.24.2", features = ["image", "svg"] }
egui_tiles = "0.4.0"
image = "0.23.14"
ndarray = "0.15.6"
polars = { version = "0.35.4", features = ["serde", "dtype-struct", "dtype-categorical", "csv", "lazy_regex", "strings" ] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.108"
flexim-data-type = { path = "crates/flexim-data-type" }
flexim-data-visualize = { path = "crates/flexim-data-visualize" }
eframe = "0.24.1"
env_logger = "0.10.1"
scarlet = "1.2.0"
unwrap-ord = "0.1.2"
itertools = "0.12.0"


[dependencies]
egui.workspace = true
egui_extras.workspace = true
egui_tiles.workspace = true
flexim-data-type.workspace = true
flexim-data-visualize.workspace = true
eframe.workspace = true
env_logger.workspace = true
ndarray.workspace = true
itertools.workspace = true
