[package]
name = "flexim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*",
    "flexim_py"
]

[workspace.dependencies]
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18"}
tonic = "0.10.2"
tonic-build = "0.10.2"
tokio = { version = "1.35.1", features = ["full"] }
prost = "0.12.3"
anyhow = "1.0.78"
egui = "0.25.0"
egui_extras = { version = "0.25.0", features = ["image", "svg"] }
egui_tiles = "0.6.0"
image = "0.23.14"
ndarray = { version = "0.15.6", features = ["serde"] }
polars = { version = "0.35.4", features = ["serde", "dtype-struct", "dtype-categorical", "csv", "lazy_regex", "strings", "ipc" ] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"
flexim-data-type = { path = "crates/flexim-data-type" }
flexim-data-view = { path = "crates/flexim-data-view" }
flexim-data-visualize = { path = "crates/flexim-data-visualize" }
flexim-table-widget = { path = "crates/flexim-table-widget" }
flexim-connect = { path = "crates/flexim-connect" }
flexim-storage = { path = "crates/flexim-storage" }
num-derive = "0.4.1"
chrono = "0.4.31"
eframe = "0.25.0"
env_logger = "0.10.1"
scarlet = "1.2.0"
unwrap-ord = "0.1.2"
itertools = "0.12.0"
rand = "0.8.5"
num-traits = "0.2.17"
tiny-skia = "0.11.3"
log = "0.4.20"
downcast-rs = "1.2.0"
indexmap = "2.1.0"


[dependencies]
anyhow.workspace = true
egui.workspace = true
egui_extras.workspace = true
egui_tiles.workspace = true
flexim-data-type.workspace = true
flexim-data-view.workspace = true
flexim-data-visualize.workspace = true
flexim-connect.workspace = true
flexim-storage.workspace = true
eframe.workspace = true
env_logger.workspace = true
ndarray.workspace = true
itertools.workspace = true
serde.workspace = true
rand.workspace = true
polars.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
log.workspace = true