[package]
name = "flexim"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*",
    "flexim_py"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.clippy]
dbg_macro = "warn"


[workspace.dependencies]
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
tonic = "0.10.2"
tonic-build = "0.10.2"
tokio = { version = "1.35.1", features = ["full"] }
prost = "0.12.3"
anyhow = { version = "1.0.78", features = ["backtrace"] }
thiserror = { version = "1.0.57", features = [] }
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["image", "svg", "syntect"] }
eframe = "0.27.2"
egui_tiles = "0.8.0"
image = { version = "0.24", features = ["png", "jpeg"] }
ndarray = { version = "0.15.6", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"
polars = { path = "crates/flexim-polars" }
flexim-data-type = { path = "crates/flexim-data-type" }
flexim-data-view = { path = "crates/flexim-data-view" }
flexim-data-visualize = { path = "crates/flexim-data-visualize" }
flexim-table-widget = { path = "crates/flexim-table-widget" }
flexim-connect = { path = "crates/flexim-connect" }
flexim-storage = { path = "crates/flexim-storage" }
flexim-font = { path = "crates/flexim-font" }
flexim-layout = { path = "crates/flexim-layout" }
flexim-utility = { path = "crates/flexim-utility" }
flexim-config = { path = "crates/flexim-config" }
num-derive = "0.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.1"
scarlet = "1.2.0"
unwrap-ord = "0.1.2"
itertools = "0.12.0"
rand = "0.8.5"
num-traits = "0.2.17"
tiny-skia = "0.11.3"
log = "0.4.20"
downcast-rs = "1.2.0"
indexmap = "2.1.0"
puffin = "0.19.0"
puffin_http = "0.16.0"
rfd = "0.13.0"
rstest = "0.18.2"
enum-iterator = "2.0.0"


[patch.crates-io]
egui = { git = "https://github.com/higumachan/egui.git", rev = "01e5523c969e9eafb8929e03ef01b66cc5c28d13" }
#egui_extras = { git = "https://github.com/higumachan/egui.git", rev = "fbce3658dcd3e8d2544901d0391daba7006d8e69" }
#eframe = { git = "https://github.com/higumachan/egui.git", rev = "fbce3658dcd3e8d2544901d0391daba7006d8e69" }


[lints]
workspace = true

[dependencies]
rfd.workspace = true
anyhow.workspace = true
egui.workspace = true
egui_extras.workspace = true
egui_tiles.workspace = true
flexim-data-type.workspace = true
flexim-data-view.workspace = true
flexim-data-visualize.workspace = true
flexim-connect.workspace = true
flexim-storage.workspace = true
flexim-layout.workspace = true
eframe.workspace = true
env_logger.workspace = true
ndarray.workspace = true
itertools.workspace = true
serde.workspace = true
rand.workspace = true
polars = { workspace = true, features = ["io", "csv"] }
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
log.workspace = true
bincode.workspace = true
flexim-font.workspace = true
puffin_http.workspace = true
puffin.workspace = true
chrono.workspace = true
flexim-utility.workspace = true
flexim-config.workspace = true


[package.metadata.packager]
# before-packaging-command = "cargo build --release"
product-name = "Flexim"
identifier = "com.flexim.application"
resources = ["Cargo.toml", "src", "assets/logo.png"]
icons = ["assets/logo.png"]
#out_dir = "/Users/yuta/ghq/github.com/higumachan/flexim/target/release"
#binaries = [{path = "/Users/yuta/ghq/github.com/higumachan/flexim/target/release/flexim", main = true}]
