[package]
name = "flexim_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flexim_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
numpy = "0.20.0"
ndarray.workspace = true
serde.workspace = true
bincode.workspace = true

[dev-dependencies]
polars = { workspace = true, features = ["io", "ipc", "csv"]}