[package]
name = "flexim_py"
version.workspace = true
edition.workspace = true


[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flexim_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
numpy = "0.20.0"
ndarray.workspace = true
serde.workspace = true
bincode.workspace = true
flexim-connect.workspace = true
flexim-data-type.workspace = true
tokio.workspace = true
tonic.workspace = true

[dev-dependencies]
polars = { workspace = true, features = ["io", "ipc", "csv"]}
