[package]
name = "flexim-client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexim-connect.workspace = true
tonic.workspace = true
anyhow = { version = "1" }
tokio.workspace = true
polars.workspace = true
flexim-data-type.workspace = true
itertools.workspace = true
serde_json = "1"

[lints]
workspace = true
