[package]
name = "flexim-connect"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
polars = { workspace = true, features = ["io", "ipc"] }
anyhow = { version = "1"}
bincode.workspace = true
ndarray.workspace = true
flexim-data-type.workspace = true
flexim-storage.workspace = true
num-derive.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build.workspace = true