[package]
name = "flexim-data-type"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
image.workspace = true
ndarray.workspace = true
serde = "1"
polars.workspace = true
rand.workspace = true
anyhow = { version = "1"}
thiserror = { version = "1", features = [] }
