[package]
name = "flexim-data-type"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
image.workspace = true
ndarray.workspace = true
serde.workspace = true
polars = { workspace = true, features = ["io", "csv"] }
rand.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true