[package]
name = "flexim-data-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexim-table-widget.workspace = true
flexim-data-type.workspace = true
rand.workspace = true
egui.workspace = true
polars.workspace = true
serde = { version = "1.0.193", features = ["derive"] }
