[package]
name = "flexim-data-view"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
flexim-table-widget.workspace = true
flexim-data-type.workspace = true
rand.workspace = true
egui.workspace = true
polars.workspace = true
serde.workspace = true
itertools.workspace = true
