[package]
name = "flexim-data-visualize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexim-data-type.workspace = true
flexim-data-view.workspace = true
flexim-table-widget.workspace = true
flexim-storage.workspace = true
egui.workspace = true
egui_tiles.workspace = true
scarlet.workspace = true
ndarray.workspace = true
image.workspace = true
unwrap-ord.workspace = true
itertools.workspace = true
num-traits.workspace = true
anyhow.workspace = true
rand.workspace = true
polars = { workspace = true }
downcast-rs.workspace = true
log.workspace = true
indexmap.workspace = true
serde.workspace = true
puffin.workspace = true

[dev-dependencies]
env_logger.workspace = true
eframe.workspace = true
egui_extras.workspace = true
