[package]
name = "polars"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
polars-core = { version = "0.40.0", default-features = true, features = ["dtype-struct", "dtype-categorical", "strings", "regex", "serde", "rows", "private"] }
polars-io = { version = "0.40.0", optional = true, default-features = true, features = ["serde", "dtype-categorical", "dtype-struct", "private"] }
polars-ops = { version = "0.40.0", default-features = true, features = ["dtype-struct", "dtype-categorical", "strings", "private"] }

[features]
io = ["polars-io"]
ipc = ["polars-io/ipc"]
csv = ["polars-io/csv"]
fmt = ["polars-core/fmt"]
