[package]
name = "polars"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
polars-core = { version = "0.30.0", default-features = true, features = ["dtype-struct", "dtype-categorical", "strings", "regex", "serde", "rows"] }
polars-io = { version = "0.30.0", optional = true, default-features = true, features = ["serde", "dtype-categorical", "dtype-struct", "csv"] }
polars-ops = { version = "0.30.0", default-features = true, features = ["dtype-struct", "dtype-categorical", "strings"] }

[features]
io = ["polars-io"]
ipc = ["polars-io/ipc"]
csv = ["polars-io/csv"]
fmt = ["polars-core/fmt"]
