[package]
name = "polars"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
polars-core = { version = "0.45.1", features = ["dtype-struct", "dtype-categorical", "strings", "regex", "serde", "rows", "lazy"] }
polars-io = { version = "0.45.1", optional = true, features = ["serde", "dtype-categorical", "dtype-struct", "csv"] }
polars-ops = { version = "0.45.1", features = ["dtype-struct", "dtype-categorical", "strings"] }
polars-lazy = { version = "0.45.1", features = ["dtype-struct", "dtype-categorical"] }
arrow2 = { version = "0.18.0", features = ["io_ipc"] }

[features]
default = ["io", "ipc", "csv", "fmt", "lazy"]
io = ["polars-io"]
ipc = ["polars-io/ipc"]
csv = ["polars-io/csv"]
fmt = ["polars-core/fmt"]
lazy = ["polars-core/lazy"]
