[package]
name = "flexim-storage"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
flexim-data-type.workspace = true
chrono.workspace = true
anyhow.workspace = true
rand.workspace = true
log = "0.4"
serde = "1"