[package]
name = "flexim-storybook"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true
egui_extras.workspace = true
polars = { workspace = true, features = ["io", "ipc", "csv", "fmt"] }
itertools.workspace = true
flexim-data-type.workspace = true
flexim-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
puffin.workspace = true
rand.workspace = true
anyhow.workspace = true
flexim-table-widget.workspace = true

[dev-dependencies]
eframe.workspace = true
env_logger.workspace = true

[lints]
workspace = true
