[package]
name = "flexim-table-widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true
egui_extras.workspace = true
polars.workspace = true
itertools.workspace = true
flexim-data-type.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true

[dev-dependencies]
eframe.workspace = true
env_logger.workspace = true